send titi po please

--- a/src/btt/retypecode.form
+++ b/src/btt/retypecode.form
@@ -87,7 +87,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="scode">
           <Properties>
-            <Property name="enabled" type="boolean" value="false"/>
+            <Property name="editable" type="boolean" value="false"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
