--- a/src/Admin/userAEU.form
+++ b/src/Admin/userAEU.form
@@ -96,6 +96,11 @@
               </Layout>
               <SubComponents>
                 <Component class="javax.swing.JLabel" name="image">
+                  <Properties>
+                    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                    </Property>
+                  </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                       <AbsoluteConstraints x="80" y="50" width="320" height="230"/>
