--- a/src/Admin/admin_dashboard.form
+++ b/src/Admin/admin_dashboard.form
@@ -305,8 +305,9 @@
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel25">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/icons/return.png"/>
+                  <Image iconType="3" name="/Admin_icon/undo.png"/>
                 </Property>
               </Properties>
               <Events>
@@ -314,7 +315,7 @@
               </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="10" y="2" width="-1" height="40"/>
+                  <AbsoluteConstraints x="0" y="2" width="40" height="40"/>
                 </Constraint>
               </Constraints>
             </Component>
