--- a/src/Admin/userAEU.form
+++ b/src/Admin/userAEU.form
@@ -249,7 +249,7 @@
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
-                        <LineBorder/>
+                        <LineBorder thickness="2"/>
                       </Border>
                     </Property>
                   </Properties>
@@ -262,12 +262,12 @@
                   <Layout>
                     <DimensionLayout dim="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="image" alignment="0" pref="308" max="32767" attributes="0"/>
+                          <Component id="image" alignment="0" pref="306" max="32767" attributes="0"/>
                       </Group>
                     </DimensionLayout>
                     <DimensionLayout dim="1">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="image" alignment="0" pref="248" max="32767" attributes="0"/>
+                          <Component id="image" alignment="0" pref="246" max="32767" attributes="0"/>
                       </Group>
                     </DimensionLayout>
                   </Layout>
